<resources>
    <string name="app_name">SeeWaves</string>
    <string name="action_settings">Settings</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="welcome_msg">Welcome!</string>
    <string name="sign_out">Sign Out</string>
    <string name="contacts_permission_rationale">Access to account information is required to sign in.</string>
    <string name="invite_menu_label">Invite</string>
    <string name="invitation_message">Please join me for a friendly chat</string>
    <string name="invitation_cta">Call to action</string>
    <string name="fresh_config">Fresh Config</string>
    <string name="cause_crash">Cause Crash</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string name="log_token">Log Token</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="fcm_message">FCM Message</string>
    <string name="msg_subscribed">Success</string>
    <string name="msg_subscribe_failed">Failed</string>
    <string name="profile_photo">Profile Picture</string>
    <string name="profile">Profile</string>
    <string name="warning_setting">Warning Setting</string>
    <string name="email_setting">Email Setting</string>
    <string name="game">Game</string>
    <string name="news"> Telah terdeteksi potensi tsunami dengan detail sebagai berikut.</string>
    <string name="location">test</string>
    <string name="time">test</string>
    <string name="title">TERDETEKSI POTENSI TSUNAMI</string>
    <string name="detail">Lokasi</string>
    <string name="longitude">Longitude : </string>
    <string name="latitude">Latitude :</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
</resources>
